New Crowdin updates (#40)
* New translations strings.xml (Turkish)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Turkish)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Russian)

* New translations strings.xml (Russian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (German)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Galician)

* New translations strings.xml (Romanian)

* New translations strings.xml (Romanian)

* New translations strings.xml (Italian)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrik

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -31,9 +31,9 @@
     <string name="info">Informazioni</string>
     <string name="remove_selected">Remove selected</string>
     <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
+    <string name="empty_favorites_title">Non hai preferiti</string>
+    <string name="label">Etichetta</string>
+    <string name="path">Percorso</string>
     <string name="date">Data</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">KB</string>
@@ -46,10 +46,10 @@
     <string name="back_cd">Back</string>
     <string name="settings_title">Impostazioni</string>
     <string name="reset_settings">Ripristina impostazioni</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
+    <string name="settings_general">Generali</string>
+    <string name="settings_trash_title">Utilizza il cestino</string>
     <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="settings_about_app_title">About Gallery</string>
+    <string name="settings_about_app_title">Informazioni su Galleria</string>
     <string name="settings_about_app_summary">Versione %s</string>
     <string name="move_album_to_trash">Sposta l\'album nel cestino</string>
     <string name="pinned_albums_title">Pinned Albums</string>
@@ -59,6 +59,19 @@
     <string name="location">Location</string>
     <string name="location_cd">Media Location</string>
     <string name="location_map_cd">Location Map</string>
+    <string name="app_dev">by %s</string>
+    <string name="app_dev_name">IacobIonut01</string>
+    <string name="donate">Donate</string>
+    <string name="github">Github</string>
+    <string name="donate_button_cd">Donate Button</string>
+    <string name="github_button_cd">Github Button</string>
+    <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
+    <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
+    <string name="settings_cache">Cache</string>
+    <string name="settings_disk_cache_title">Disk cache size</string>
+    <string name="settings_cached_screen_title">Cached screen count</string>
+    <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
+    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
