--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -1,68 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="share_media">Share</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="share">Share</string>
-    <string name="info">Info</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
-    <string name="date">Date</string>
+    <string name="app_name">Галерея</string>
+    <string name="nav_albums">Альбомы</string>
+    <string name="searchbar_title"><![CDATA[Поиск фотографий и видео]]></string>
+    <string name="header_today">Сегодня</string>
+    <string name="header_yesterday">Вчера</string>
+    <string name="share_media">Поделиться</string>
+    <string name="request_permissions">Запрос разрешений</string>
+    <string name="filter">Фильтр</string>
+    <string name="filter_recent">Недавние</string>
+    <string name="filter_nameAZ">Название (А-Я)</string>
+    <string name="filter_nameZA">Название (Я-А)</string>
+    <string name="filter_old">Старые</string>
+    <string name="selected_s">Выбранные %s</string>
+    <string name="trash">Мусор</string>
+    <string name="pause_video">Пауза</string>
+    <string name="play_video">Воспроизвести</string>
+    <string name="favorites">Любимые</string>
+    <string name="no_media_title">Похоже здесь пусто</string>
+    <string name="no_media_cd">Медиафайлы отсутствуют</string>
+    <string name="empty_trash_title">Чисто</string>
+    <string name="empty_trash_cd">Мусора нет</string>
+    <string name="error_title">Что-то пошло не так :(</string>
+    <string name="error_cd">Вышла ошибка</string>
+    <string name="copy_error">Ошибка при копировании</string>
+    <string name="trash_restore">Восстановить</string>
+    <string name="trash_empty">Пусто</string>
+    <string name="trash_delete">Удалить</string>
+    <string name="share">Поделиться</string>
+    <string name="info">Информация</string>
+    <string name="remove_selected">Удалить выбранные</string>
+    <string name="remove_all">Удалить все</string>
+    <string name="empty_favorites_title">У вас нет любимых</string>
+    <string name="label">Ярлык</string>
+    <string name="path">Путь</string>
+    <string name="date">Число</string>
     <string name="iso">" • ISO"</string>
-    <string name="kb">KB</string>
-    <string name="mb">MB</string>
-    <string name="gb">GB</string>
-    <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
-    <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="reset_settings">Reset Settings</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="settings_about_app_title">About Gallery</string>
-    <string name="settings_about_app_summary">Version %s</string>
-    <string name="move_album_to_trash">Move album to trash</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
-    <string name="location">Location</string>
-    <string name="location_cd">Media Location</string>
-    <string name="location_map_cd">Location Map</string>
+    <string name="kb">КБ</string>
+    <string name="mb">МБ</string>
+    <string name="gb">ГБ</string>
+    <string name="metadata">Метаданные</string>
+    <string name="select_all">Выбрать все</string>
+    <string name="unselect_all">Отменить выбор</string>
+    <string name="drop_down_cd">Провалиться</string>
+    <string name="back_cd">Назад</string>
+    <string name="settings_title">Параметры</string>
+    <string name="reset_settings">Сброс параметров</string>
+    <string name="settings_general">Основные</string>
+    <string name="settings_trash_title">Использовать мусорное ведро</string>
+    <string name="settings_trash_summary">Оставит удаленные медиафайлы в памяти на 30 дней.\nВ случае отключения, медиафайлы будут немедленно удалены навсегда.</string>
+    <string name="settings_about_app_title">О галерее</string>
+    <string name="settings_about_app_summary">Версия %s</string>
+    <string name="move_album_to_trash">Переместить альбом в мусор</string>
+    <string name="pinned_albums_title">Прикреплённые альбомы</string>
+    <string name="unpin">Открепить</string>
+    <string name="pin">Прикрепить</string>
+    <string name="nav_timeline">Шкала времени</string>
+    <string name="location">Местоположение</string>
+    <string name="location_cd">Местоположение медиа файла</string>
+    <string name="location_map_cd">Карта</string>
+    <string name="app_dev">by %s</string>
+    <string name="app_dev_name">IacobIonut01</string>
+    <string name="donate">Donate</string>
+    <string name="github">Github</string>
+    <string name="donate_button_cd">Donate Button</string>
+    <string name="github_button_cd">Github Button</string>
+    <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
+    <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
+    <string name="settings_cache">Cache</string>
+    <string name="settings_disk_cache_title">Disk cache size</string>
+    <string name="settings_cached_screen_title">Cached screen count</string>
+    <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
+    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
     <plurals name="item_count">
-        <item quantity="one">%s item</item>
-        <item quantity="few">%s items</item>
-        <item quantity="many">%s items</item>
-        <item quantity="other">%s items</item>
+        <item quantity="one">%sпункт</item>
+        <item quantity="few">%sпунктов</item>
+        <item quantity="many">%sпунктов</item>
+        <item quantity="other">%sпунктов</item>
     </plurals>
 </resources>
