--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,56 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Galeria</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="share_media">Share</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="share">Share</string>
-    <string name="info">Info</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
-    <string name="date">Date</string>
-    <string name="iso">" • ISO"</string>
+    <string name="nav_albums">Álbuns</string>
+    <string name="searchbar_title"><![CDATA[Buscar fotos e vídeos]]></string>
+    <string name="header_today">Hoje</string>
+    <string name="header_yesterday">Ontem</string>
+    <string name="share_media">Compartilhar</string>
+    <string name="request_permissions">Solicitar permissões</string>
+    <string name="filter">Filtro</string>
+    <string name="filter_recent">Recentes</string>
+    <string name="filter_nameAZ">Nome (A-Z)</string>
+    <string name="filter_nameZA">Nome (Z-A)</string>
+    <string name="filter_old">Antigo</string>
+    <string name="selected_s">Selecionado %s</string>
+    <string name="trash">Lixeira</string>
+    <string name="pause_video">Pausar video</string>
+    <string name="play_video">Reproduzir video</string>
+    <string name="favorites">Favoritos</string>
+    <string name="no_media_title">Parece vazio aqui</string>
+    <string name="no_media_cd">Nenhuma Midia encontrada</string>
+    <string name="empty_trash_title">Limpo</string>
+    <string name="empty_trash_cd">Lixeira está vazia</string>
+    <string name="error_title">Algo correu mal :(</string>
+    <string name="error_cd">Ocorreu um erro</string>
+    <string name="copy_error">Erro ao copiar</string>
+    <string name="trash_restore">Restaurar</string>
+    <string name="trash_empty">Vazio</string>
+    <string name="trash_delete">Deletar</string>
+    <string name="share">Compartilhar</string>
+    <string name="info">Informações</string>
+    <string name="remove_selected">Remover selecionado</string>
+    <string name="remove_all">Remover tudo</string>
+    <string name="empty_favorites_title">Você não tem favoritos</string>
+    <string name="label">Etiqueta</string>
+    <string name="path">Caminho</string>
+    <string name="date">Data</string>
+    <string name="iso">" - ISO"</string>
     <string name="kb">KB</string>
     <string name="mb">MB</string>
     <string name="gb">GB</string>
-    <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
-    <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="reset_settings">Reset Settings</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="settings_about_app_title">About Gallery</string>
-    <string name="settings_about_app_summary">Version %s</string>
+    <string name="metadata">Metadados</string>
+    <string name="select_all">Seleciona tudo</string>
+    <string name="unselect_all">Desmarcar tudo</string>
+    <string name="drop_down_cd">Suspenso</string>
+    <string name="back_cd">Voltar</string>
+    <string name="settings_title">Configurações</string>
+    <string name="reset_settings">Resetar configurações</string>
+    <string name="settings_general">Geral</string>
+    <string name="settings_trash_title">Usar lixeira</string>
+    <string name="settings_trash_summary">Armazenar midias apagadas durante 30 dias.\nExcluir mídia resultará em perda permanente se desativado.</string>
+    <string name="settings_about_app_title">Sobre a Galeria</string>
+    <string name="settings_about_app_summary">Versão %s</string>
     <string name="move_album_to_trash">Move album to trash</string>
     <string name="pinned_albums_title">Pinned Albums</string>
     <string name="unpin">Unpin</string>
@@ -59,6 +59,19 @@
     <string name="location">Location</string>
     <string name="location_cd">Media Location</string>
     <string name="location_map_cd">Location Map</string>
+    <string name="app_dev">by %s</string>
+    <string name="app_dev_name">IacobIonut01</string>
+    <string name="donate">Donate</string>
+    <string name="github">Github</string>
+    <string name="donate_button_cd">Donate Button</string>
+    <string name="github_button_cd">Github Button</string>
+    <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
+    <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
+    <string name="settings_cache">Cache</string>
+    <string name="settings_disk_cache_title">Disk cache size</string>
+    <string name="settings_cached_screen_title">Cached screen count</string>
+    <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
+    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
