--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -55,10 +55,23 @@
     <string name="pinned_albums_title">固定相簿</string>
     <string name="unpin">取消固定</string>
     <string name="pin">固定</string>
-    <string name="nav_timeline">Timeline</string>
-    <string name="location">Location</string>
-    <string name="location_cd">Media Location</string>
-    <string name="location_map_cd">Location Map</string>
+    <string name="nav_timeline">時間軸</string>
+    <string name="location">位置</string>
+    <string name="location_cd">媒體位置</string>
+    <string name="location_map_cd">位置地圖</string>
+    <string name="app_dev">by %s</string>
+    <string name="app_dev_name">IacobIonut01</string>
+    <string name="donate">Donate</string>
+    <string name="github">Github</string>
+    <string name="donate_button_cd">Donate Button</string>
+    <string name="github_button_cd">Github Button</string>
+    <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
+    <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
+    <string name="settings_cache">Cache</string>
+    <string name="settings_disk_cache_title">Disk cache size</string>
+    <string name="settings_cached_screen_title">Cached screen count</string>
+    <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
+    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
     <plurals name="item_count">
         <item quantity="other">%s 個項目</item>
     </plurals>
