--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,13 @@
     <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
     <string name="use_as">Use as</string>
     <string name="set_as">"Set as: "</string>
+    <string name="delete_dialog_title">You\'re about to delete %s items</string>
+    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_confirm">Confirm</string>
+    <string name="action_confirmed">Confirmed</string>
+    <string name="restore_dialog_title">You\'re about to restore %s items</string>
+    <string name="restore_dialog_title_confirmation">Restoring %s items...</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
