--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,9 @@
     <string name="action_confirm">Confirm</string>
     <string name="action_confirmed">Confirmed</string>
     <string name="restore_dialog_title">You\'re about to restore %s items</string>
-    <string name="restore_dialog_title_confirmation">Restoring %s items...</string>
+    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
+    <string name="trash_dialog_title">You\'re about to trash %s items</string>
+    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
