--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,9 @@
     <string name="edit_cd">edit</string>
     <string name="edit_location_cd">Edit location</string>
     <string name="add_location_cd">Add location</string>
+    <string name="settings_theme_header">Theme</string>
+    <string name="settings_follow_system_theme_title">Follow System Theme</string>
+    <string name="settings_dark_mode_title">Use Dark Mode</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
